<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assist\'em</string>
    <string name="hello_world">Hello Caretaker!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login!</string>
    <string name="register">Register</string>
    <string name="title_activity_main">Assist\'em</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone Number</string>
    <string name="caretaker">Caretaker</string>
    <string name="caretakers">Caretakers</string>
    <string name="primary_caretaker">Primary Caretaker</string>
    <string name="patient">Patient</string>
    <string name="create_a_community">Create a Community</string>
    <string name="find_a_community">Find a Community</string>
    <string name="register_community_name_hint">Community Name</string>
    <string name="register_community_privacy">Privacy</string>
    <string name="register_find_community_hint">Patient Email or Community Name</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_calendar">Calendar</string>
    <string name="drawer_grocery_list">Grocery List</string>
    <string name="drawer_location">Location</string>
    <string name="drawer_ping">Ping</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_community">Community</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="add_event_description_hint">Description</string>
    <string name="add_event_title_hint">Title</string>
    <string name="add_event_location_hint">Location</string>
    <string name="add_event_start_time_hint">Start Time</string>
    <string name="add_event_time_to">to</string>
    <string name="add_event_end_time_hint">End Time</string>
    <string name="add_event_start_date_hint">Start Date</string>
    <string name="add_event_end_date_hint">End Date</string>
    <string name="add_event_category_hint">Category</string>
    <string name="add_event_priority_description">Priority</string>
    <string name="add_event_time_description">Time</string>
    <string name="add_event_date_description">Date</string>
    <string name="add_event_location_description">Location</string>
    <string name="add_event_category_description">Category</string>
    <string name="add_event_submit">Add Event</string>
    <string name="add_event_repeating">Repeating</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="title_activity_view">ViewActivity</string>
    <string name="title_activity_view_event">ViewEventActivity</string>
    <string name="view_event_volunteer">Volunteer</string>
    <string name="view_event_unvolunteer">Unvolunteer</string>
    <string name="view_event_submit">Submit</string>
    <string name="view_event_delete">Delete</string>
    <string name="settings_logout_text">Logout</string>
    <string name="event_added_toast">Event added</string>
    <string name="event_volunteered_toast">Volunteered for event</string>
    <string name="event_edited_toast">Event modified</string>
    <string name="event_deleted_toast">Event deleted</string>
    <string name="grocery_list_sort_by">Sort by:</string>
    <string name="title_activity_add_grocery_item">Add Grocery Item</string>
    <string name="add_grocery_item_title_hint">Title</string>
    <string name="add_grocery_item_description_hint">Description</string>
    <string name="add_grocery_item_time_hint">Time</string>
    <string name="add_grocery_item_date_hint">Date</string>
    <string name="add_grocery_item_location_hint">Location</string>
    <string name="add_grocery_item_quantity_hint">Quantity</string>
    <string name="add_grocery_item_on">on</string>
    <string name="title_activity_ping">PingActivity</string>
    <string name="add_grocery_item_submit">Add Item</string>
    <string name="title_activity_view_grocery_item">View Grocery Item</string>
    <string name="edit_grocery_item_submit">Submit Changes</string>
    <string name="grocery_tab_all">All Items</string>
    <string name="grocery_tab_not_taken">Open Items</string>
    <string name="grocery_tab_taken">Taken Items</string>
    <string name="grocery_tab_your_items">Your Items</string>
    <string name="view_grocery_item_volunteer">Volunteer</string>
    <string name="view_grocery_item_unvolunteer">Unvolunteer</string>
    <string name="view_grocery_item_edit">Edit</string>
    <string name="view_grocery_item_delete">Delete</string>
    <string name="title_activity_profile">View Profile</string>
    <string name="illness_description">Illness Description</string>
    <string name="family_members">Family Members</string>
    <string name="availability">Availability</string>
    <string name="modify_availiability">Modify Availability</string>
    <string name="modify_primary_caretaker">Change Primary Caretaker</string>
    <string name="title_activity_modify_availability">Modify Availability</string>
    <string name="title_activity_modify_primary_caretaker">Change Primary Caretaker</string>
    <string name="modify_submit">Submit</string>
    <string name="add_availability_start">Start</string>
    <string name="add_availability_end">End</string>
    <string name="add_availability_day">Day of Week</string>
    <string name="add_availability_time">Time</string>
    <string name="add_availability">Add Availability</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="no_availability">No Availability Set</string>
    <string name="no_primary_caretaker">No Primary Caretaker Set</string>
    <string name="profile_edit">Edit</string>
    <string name="profile_submit">Submit</string>
    <string name="ping_title">Title</string>
    <string name="ping_description">Description</string>
    <string name="ping_time">Time</string>
    <string name="ping_now">Now</string>
    <string name="dialog_ping">Ping</string>
    <string name="repeat_monday">M</string>
    <string name="repeat_tuesday">T</string>
    <string name="repeat_wednesday">W</string>
    <string name="repeat_thursday">R</string>
    <string name="repeat_friday">F</string>
    <string name="repeat_saturday">S</string>
    <string name="repeat_sunday">U</string>
    <string name="repeating_day_of_week">Days of Week</string>
    <string name="repeating_number_of_weeks">Number of Weeks</string>
    <string name="dialog_submit">Submit</string>
    <string name="dialog_add_repeating">Repeating Event</string>
    <string name="available">Available</string>
    <string name="refresh">Refresh</string>
    <string name="delete_repeating_question">Delete repeating events?</string>
    <string name="delete_repeating_question_full">This event is repeating. Would you like to delete just this event or all in the series?</string>
    <string name="delete_single">Single</string>
    <string name="delete_all">All</string>
    <string name="calendar_today_view">Today</string>
    <string name="calendar_day_view">Single day view</string>
    <string name="calendar_three_day_view">3 days view</string>
    <string name="calendar_week_view">Week view</string>

</resources>
